set a bigger width to modal on small screens + fix page scrolling on Chrome

--- a/frontend/src/assets/styles/_extra.scss
+++ b/frontend/src/assets/styles/_extra.scss
@@ -1,9 +1,18 @@
+@media screen and (max-width: 30em) {
+  .popup-content {
+    width: 66% !important;
+  }
+}
+
 @media screen and (min-width: 30em) {
   .vh-minus-200-ns {
     height: calc(100vh - 200px);
   }
   .vh-minus-122-ns {
     height: calc(100vh - 122px);
+  }
+  .popup-content {
+    width: 44% !important;
   }
 }
 
@@ -161,11 +170,10 @@ div.messageSubjectLinks, strong.messageSubjectLinks {
 }
 
 div.messageBodyLinks {
-    &>a {
-      color: $blue-dark;
-      text-decoration: underline;
-      font-weight: 600;
-    }
-    color: $blue-grey;
-
+  &>a {
+    color: $blue-dark;
+    text-decoration: underline;
+    font-weight: 600;
+  }
+  color: $blue-grey;
 }
